--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.7.1",
+    "@supabase/supabase-js": "^2.2.1",
     "axios": "^0.27.2",
     "next": "13.0.6",
     "react": "18.2.0",
