--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "axios": "^0.27.2",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "18.2.0",
     "@aspida/axios": "^1.11.0",
     "@aspida/swr": "^1.11.0",
     "@chakra-ui/icons": "^2.0.14",
@@ -29,13 +27,14 @@
     "@types/node": "^18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "bulma": "^0.9.4",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
     "framer-motion": "^7.10.2",
     "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6"
   },
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
