--- a/package.json
+++ b/package.json
@@ -30,12 +30,11 @@
     "framer-motion": "^7.10.2",
     "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.9.4",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6"
   },
+  "devDependencies": {},
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
   }
