--- a/package.json
+++ b/package.json
@@ -11,30 +11,31 @@
     "seed": "ts-node --project prisma/tsconfig.local.json prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "4.7.1",
-    "@supabase/supabase-js": "^2.2.1",
-    "axios": "^0.27.2",
-    "next": "13.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@aspida/axios": "^1.11.0",
     "@aspida/swr": "^1.11.0",
     "@chakra-ui/icons": "^2.0.14",
     "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@prisma/client": "4.7.1",
+    "@supabase/supabase-js": "^2.2.1",
     "@tanstack/react-table": "^8.7.4",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "framer-motion": "^7.10.2",
-    "prisma": "^4.7.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "axios": "^0.27.2",
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6"
+    "eslint-config-next": "13.0.6",
+    "framer-motion": "^7.10.2",
+    "next": "13.0.6",
+    "prisma": "^4.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "ts-node": "^10.9.1",
+    "tsd": "^0.25.0",
+    "typescript": "^4.9.4"
   },
-  "devDependencies": {},
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
   }
