--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-dom": "18.2.0",
     "ts-node": "^10.9.1",
     "tsd": "^0.25.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
