--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prisma": "^4.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.57.1",
     "ts-node": "^10.9.1",
     "tsd": "^0.25.0",
     "typescript": "^4.9.4",
