認証機能を追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["fandomapp", "supabase"]
+  "cSpell.words": [
+    "chakra",
+    "fanbook",
+    "Fanbooks",
+    "fandomapp",
+    "fanfic",
+    "Fanfics",
+    "signin",
+    "signup",
+    "supabase"
+  ]
 }
